--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.0.8",
     "@radix-ui/react-slot": "^1.1.1",
-    "ai": "^4.0.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
     "next": "14.2.16",
+    "openai": "^4.0.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.5",
