--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "dontsign",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,13 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.0.8",
     "@radix-ui/react-slot": "^1.1.1",
-    "ai": "^4.0.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
     "next": "14.2.16",
+    "openai": "^4.24.1",
+    "pdfjs-dist": "^4.0.379",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.5",
@@ -25,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
     "postcss": "^8",
