--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,5 @@
   "buildCommand": "next build",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "regions": ["iad1"],
-  "env": {
-    "OPENAI_API_KEY": "@openai-api-key"
-  }
+  "outputDirectory": ".next"
 }
