--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Code Quality Check
+name: Lint
 
 on:
   push:
@@ -7,7 +7,19 @@ on:
     branches: [ main ]
 
 jobs:
-  validate:
+  lint:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    
+    - name: Setup Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '18'
+        cache: 'npm'
+        
+    - name: Install dependencies
+      run: npm ci --ignore-scripts
+      
+    - name: Run linting
+      run: npm run lint
