--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         cache: 'npm'
         
     - name: Install dependencies
-      run: npm ci --ignore-scripts
+      run: npm install
       
     - name: Run linting
       run: npm run lint
