--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "next": "14.1.0",
     "openai": "^4.26.0",
-    "pdfjs-dist": "^4.0.379",
+    "pdfjs-dist": "3.11.174",
     "react": "^18",
     "react-dom": "^18",
     "lucide-react": "^0.323.0",
