--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sentry/nextjs": "^7.101.0",
     "next": "14.1.0",
     "openai": "^4.26.0",
     "pdfjs-dist": "3.11.174",
