Add env example file for Sentry configuration

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
-# OpenAI API Configuration
-OPENAI_API_KEY=your_api_key_here
+# Your Sentry DSN
+NEXT_PUBLIC_SENTRY_DSN=
 
-# Optional Configuration
-NEXT_PUBLIC_MAX_FILE_SIZE=10485760  # 10MB in bytes
-NEXT_PUBLIC_SUPPORTED_FILES=.pdf,.docx
+# Enable source maps uploading during build
+SENTRY_AUTH_TOKEN=
+SENTRY_ORG=
+SENTRY_PROJECT=dontsign
+
+# Current environment
+NEXT_PUBLIC_ENV=development
