--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dontsign",
-  "version": "1.1.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,32 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-dropdown-menu": "^2.1.4",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@sentry/nextjs": "^7.101.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.0",
-    "lucide-react": "^0.323.0",
-    "next": "14.1.0",
-    "next-themes": "^0.2.1",
-    "openai": "^4.26.0",
-    "pdfjs-dist": "3.11.174",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-dropzone": "^14.3.5",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "@radix-ui/react-progress": "^1.0.3",
+    "@sentry/nextjs": "^7.80.1",
+    "@types/node": "20.9.0",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
+    "autoprefixer": "10.4.16",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "eslint": "8.53.0",
+    "eslint-config-next": "14.0.2",
+    "framer-motion": "^10.16.16",
+    "lucide-react": "^0.292.0",
+    "next": "14.0.2",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^4.0.189",
+    "postcss": "8.4.31",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss": "3.3.5",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "5.2.2"
   }
 }
