--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "cp node_modules/pdfjs-dist/build/pdf.worker.min.js public/pdf.worker.js && next dev",
+    "build": "cp node_modules/pdfjs-dist/build/pdf.worker.min.js public/pdf.worker.js && next build",
     "start": "next start",
     "lint": "next lint"
   },
