--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.292.0",
     "next": "14.0.2",
+    "next-themes": "^0.2.1",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^4.0.189",
     "postcss": "8.4.31",
