--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "predev": "mkdir -p public && cp node_modules/pdfjs-dist/legacy/build/pdf.worker.js public/pdf.worker.js",
+    "predev": "mkdir -p public && cp node_modules/pdfjs-dist/build/pdf.worker.min.mjs public/pdf.worker.js",
     "dev": "next dev",
-    "prebuild": "mkdir -p public && cp node_modules/pdfjs-dist/legacy/build/pdf.worker.js public/pdf.worker.js",
+    "prebuild": "mkdir -p public && cp node_modules/pdfjs-dist/build/pdf.worker.min.mjs public/pdf.worker.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -35,5 +35,8 @@
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2"
+  },
+  "overrides": {
+    "jackspeak": "2.1.1"
   }
 }
