--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@sentry/nextjs": "^7.101.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
