docs: add Resend API key to environment variables example

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,4 @@
-# Your Sentry DSN
-NEXT_PUBLIC_SENTRY_DSN=
-
-# Enable source maps uploading during build
-SENTRY_AUTH_TOKEN=
-SENTRY_ORG=
-SENTRY_PROJECT=dontsign
-
-# Current environment
-NEXT_PUBLIC_ENV=development
+OPENAI_API_KEY=your_key
+SENTRY_DSN=your_sentry_dsn
+NEXT_PUBLIC_ANALYTICS_KEY=your_analytics_key
+RESEND_API_KEY=your_resend_api_key
