docs: update env example with Gmail credentials

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 OPENAI_API_KEY=your_key
 SENTRY_DSN=your_sentry_dsn
 NEXT_PUBLIC_ANALYTICS_KEY=your_analytics_key
-RESEND_API_KEY=your_resend_api_key
+GMAIL_USER=your_gmail@gmail.com
+GMAIL_APP_PASSWORD=your_app_password
