fix: restore Sentry config in env example

--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@sentry/nextjs": "^7.101.0",
+    "@types/nodemailer": "^6.4.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.0",
     "lucide-react": "^0.323.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.10.0",
     "openai": "^4.26.0",
     "pdfjs-dist": "3.11.174",
     "react": "^18",
