--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,14 @@
-OPENAI_API_KEY=your_key
-SENTRY_DSN=your_sentry_dsn
-NEXT_PUBLIC_ANALYTICS_KEY=your_analytics_key
+# Your Sentry DSN
+NEXT_PUBLIC_SENTRY_DSN=
+
+# Enable source maps uploading during build
+SENTRY_AUTH_TOKEN=
+SENTRY_ORG=
+SENTRY_PROJECT=dontsign
+
+# Current environment
+NEXT_PUBLIC_ENV=development
+
+# Gmail credentials for contact form
 GMAIL_USER=your_gmail@gmail.com
 GMAIL_APP_PASSWORD=your_app_password
