Feature/email service (#121)
* feat: add email service with Resend

* feat: add email service with Resend

* feat: integrate email service with contact form API

* docs: add Resend API key to environment variables example

* docs: add Resend API key to environment variables example

* refactor: switch from Resend to Nodemailer with Gmail

* docs: update env example with Gmail credentials

* fix: restore Sentry config in env example

* update: change email recipient to morhendos@gmail.com

* feat: add email debugging logs

* feat: enhance contact form success/error messages

* style: enhance success message visibility

* feat: add comprehensive logging to contact API

* fix: add complete contact form implementation

* feat: add loading spinner and dev warning

* remove: development mode warning

* fix: integrate email service with API route

* cleanup: remove debug logs

* refactor: extract form logic to custom hook

* refactor: extract rate limiting to middleware

* refactor: extract email template

* refactor: simplify API route with middleware

* refactor: simplify email service with template

* fix: complete contact form component

* docs: update README with email functionality

* fix: restore analysis-history section in README

* docs: add GitHub API guidelines

* docs: remove incorrect reference to SHA in GitHub API guidelines

* docs: add available functions documentation

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ SENTRY_PROJECT=dontsign
 
 # Current environment
 NEXT_PUBLIC_ENV=development
+
+# Gmail credentials for contact form
+GMAIL_USER=your_gmail@gmail.com
+GMAIL_APP_PASSWORD=your_app_password
