--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ NEXT_PUBLIC_ENV=development
 # Gmail credentials for contact form
 GMAIL_USER=your_gmail@gmail.com
 GMAIL_APP_PASSWORD=your_app_password
+
+# Analytics
+NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
