--- a/.env.example
+++ b/.env.example
@@ -13,5 +13,6 @@ NEXT_PUBLIC_ENV=development
 GMAIL_USER=your_gmail@gmail.com
 GMAIL_APP_PASSWORD=your_app_password
 
-# Analytics
+# Analytics & Ads
 NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
+NEXT_PUBLIC_GOOGLE_ADS_ID=AW-16837506632
