Add Clarity ID to environment variables example

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,6 @@
-# Your Sentry DSN
-NEXT_PUBLIC_SENTRY_DSN=
+# Google Analytics
+NEXT_PUBLIC_GA_MEASUREMENT_ID=your_ga_id
+NEXT_PUBLIC_GOOGLE_ADS_ID=your_ads_id
 
-# Enable source maps uploading during build
-SENTRY_AUTH_TOKEN=
-SENTRY_ORG=
-SENTRY_PROJECT=dontsign
-
-# Current environment
-NEXT_PUBLIC_ENV=development
-
-# Gmail credentials for contact form
-GMAIL_USER=your_gmail@gmail.com
-GMAIL_APP_PASSWORD=your_app_password
-
-# Analytics & Ads
-NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
-NEXT_PUBLIC_GOOGLE_ADS_ID=AW-16837506632
+# Microsoft Clarity
+NEXT_PUBLIC_CLARITY_ID=q3qb8dnygb
