--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,19 @@
-# Google Analytics
-NEXT_PUBLIC_GA_MEASUREMENT_ID=your_ga_id
-NEXT_PUBLIC_GOOGLE_ADS_ID=your_ads_id
+# Your Sentry DSN
+NEXT_PUBLIC_SENTRY_DSN=
 
-# Microsoft Clarity
+# Enable source maps uploading during build
+SENTRY_AUTH_TOKEN=
+SENTRY_ORG=
+SENTRY_PROJECT=dontsign
+
+# Current environment
+NEXT_PUBLIC_ENV=development
+
+# Gmail credentials for contact form
+GMAIL_USER=your_gmail@gmail.com
+GMAIL_APP_PASSWORD=your_app_password
+
+# Analytics & Ads
+NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
+NEXT_PUBLIC_GOOGLE_ADS_ID=AW-16837506632
 NEXT_PUBLIC_CLARITY_ID=q3qb8dnygb
