--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,4 @@ GMAIL_APP_PASSWORD=your_app_password
 # Analytics & Ads
 NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
 NEXT_PUBLIC_GOOGLE_ADS_ID=AW-16837506632
+NEXT_PUBLIC_CLARITY_ID=q3qb8dnygb
