--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-dom": "^18",
     "react-dropzone": "^14.3.5",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^20",
